2005-09-02 arne

	* added new interface class for communicating stuff between CFrame and Editor : VSTGUIEditorInterface.
	* because of this the makro PLUGGUI is obsolete and removed.
	* specific VST stuff is now enclosed by ENABLE_VST_EXTENSION_IN_VSTGUI like the CFileSelector stuff, where the host is asked about showing a File Chooser. If you need it, define it and set it to 1.
	* AEffGUIEditor is now subclassed from AEffEditor and VSTGUIEditorInterface (the most common compiler error now is, that you need to include "aeffguieditor.h" in your editor class header)

2005-08-31 arne

	* new mouse handling (onMouseDown, onMouseUp, onMouseMoved, onMouseEntered, onMouseExited)
	  but the old mouse method is still working, if the new methods are not implemented by the super class
	* drawing is now triggered by system events, so drawing outside of the draw method is deprecated

		This means :
	  	- all class methods which took a CDrawContext pointer will be changed except the draw methods.
	  	- you call view->invalid () instead of view->setDirty (true) from the User Interface thread.
	  	- value changes from other threads will be checked on idle and the views are marked invalid.

		Benefits :
		- less hacks
		- less code
		- cleaner differentiation of drawing and user action.
		- works better with hosts which don't follow the VST spec.

	* added controlBeginEdit and controlEndEdit to CControlListener

2005-08-22 arne

	* branched for 3.0 (vstgui_300)
	* removed all MOTIF code
	* some code cleanup
	* set version to 3.5

**********************************************************************************************************************
VSTGUI 3.0 branch
**********************************************************************************************************************

2005-08-12 arne

	* initial support for X/Y mouse wheel (currently only macosx, don't know how ms windows handles this)
	
2005-07-29 arne
